--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
+# Godot 4+ specific ignores
+.godot/
 
 # Godot-specific ignores
 .import/
-addons/
-export/*
-!export/.gdignore
-export.cfg
+/exports/*
+!/exports/.gdignore
+
+# Imported translations (automatically generated from CSV files)
+*.translation
 
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash.*.json
+
+# System/tool-specific ignores
+.directory
+*~
